--- a/index.scss
+++ b/index.scss
@@ -369,24 +369,26 @@ body {
                 height: 500px;
                 max-width: 400px;
                 width: 100%;
-                
-                h4 {
+                display: flex;
+                flex-direction: column;
+
+                h3 {
                     color: $color1;
                     text-align: center;
-                    font-size: larger;
-                    padding: 0.5em;
+                    font-size: x-large;
                 }
 
                 div { 
 
                     display: flex;
-                    height: 75%;
+                    max-height: 75%;
                     align-items: center;
+                    margin: auto 0;
                     
                     a {
                         display: block;
                         max-width: 90%;
-                        height: 90%;
+                        height: auto;
                         padding: 0;
                         margin: 0 auto;
                         align-items: center;
@@ -397,36 +399,35 @@ body {
 
                         img { 
                             display: block;
-                            max-height: 96%;
+                            height: 90%;
+                            width: 90%;
                             margin: 0 auto;
                             margin-bottom: 5%;
+                            object-fit: cover;
                         }
                     }
 
                 }
             }
 
-            .card-border {
-                display: inline-block;
-                height: 300px;
-                border: solid $color1 1px;
-            }
+            // .card-border {
+            //     display: inline-block;
+            //     height: 300px;
+            //     border: solid $color1 1px;
+            //     margin: 5 0 5 0;
+            // }
 
             .project-details {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-evenly;
                 margin: 0 auto;
+                margin-top: 10px;
                 height: 500px;
                 max-width: 400px;
                 width: 100%;
                 color: $color4;
-                h4 {
-                    color: $color1;
-                    text-align: center;
-                    font-size: larger;
-                    padding: 0.5em;
-                }
+
                 p {
                     padding: 1em;
                     margin: 0;
@@ -457,7 +458,7 @@ body {
                     box-sizing: border-box;
                     padding: 2em;
                     justify-content: space-evenly;
-                    height: 280px;
+                    height: max-content;
                     overflow: hidden;
 
                     a {
@@ -467,6 +468,7 @@ body {
                         border-radius: 20px;
                         background-color: $color4;
                         padding: .6em .5em;
+                        margin: 10px;
                         font-size: large;
                         transition: all 1s ease-in-out;
 
@@ -484,7 +486,8 @@ body {
                 flex-direction: column;
 
                 .project-card {
-                    height: 400px;
+                    min-height: 350px;
+                    max-height: 450px;
                     div {
                         max-height: 80%;
 
@@ -494,11 +497,9 @@ body {
                     }
                 }
 
-                .card-border {
+                .project-details {
                     height: auto;
-                    width: 70%;
                 }
-                
             }
 
         }
